[package]
name = "zkp_chaum_pedersen"
version = "0.1.0"
edition = "2021"


[dependencies]
rand = "0.8.5"
num-bigint = { version = "0.4", features = ["rand"] }
hex = "0.4.3"
tonic = "0.12.3"
prost = "0.13.5"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
parking_lot = "0.12.3"
dotenvy = "0.15"
env_logger = "0.11.6"
log = "0.4.25"
anyhow = "1.0.96"


[build-dependencies]
tonic-build = "0.12.3"


[[bin]]
name = "server"
path = "src/bin/server/main.rs"


[[bin]]
name = "client"
path = "src/bin/client/main.rs"
